[package]
name = "weighty"
description = "Weighty is a Rust library for reading from HID scales."
version = "0.1.1"
authors = ["M@ Dunlap <mattdunlap@gmail.com>"]
keywords = ["hid", "scale"]
repository = "https://github.com/dunmatt/weighty"
license = "MIT"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
hidapi = "2.6.1"

[dependencies.uom]
optional = true
version = "^0"

[[bin]]
name = "weigh"
required-features = ["units"]

[features]
default = []
units = ["uom"]

# optimize for size
[profile.release]
lto = "fat"
opt-level = "z"
debug = 0
overflow-checks = false
panic = "abort"
codegen-units = 1
